--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name="MainActivity"/>
         <activity android:name=".SetupActivity"/>
+        <activity android:name=".RoomActivity"/>
     </application>
 
 </manifest>
