--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name="MainActivity"/>
         <activity android:name=".SetupActivity"/>
         <activity android:name=".RoomActivity"/>
+        <activity android:name=".ScheduleActivity"/>
     </application>
 
 </manifest>
