DB저장 실패 (insert문제) 로그인-회원가입 화면 성공

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.smash">
 
     <application
@@ -21,6 +22,8 @@
         <activity android:name="MainActivity"/>
         <activity android:name=".SetupActivity"/>
         <activity android:name=".RoomActivity"/>
+        <activity android:name=".SignupActivity"/>
+
     </application>
 
 </manifest>
