jiwon브랜치에 옮기기 완료 DB저장 실패2 ㅆ@바

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".SetupActivity"/>
         <activity android:name=".RoomActivity"/>
         <activity android:name=".ScheduleActivity"/>
+        <activity android:name=".SignupActivity"/>
     </application>
 
 </manifest>
