--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".SignupActivity"/>
         <activity android:name=".InfoActivity"/>
         <activity android:name=".NoticeActivity"/>
+        <activity android:name=".MakeNoticeActivity"/>
     </application>
 
 </manifest>
